plotting s(theta), need to fix definition for angle

--- a/_RotatingBot/RotatingBot.ipynb
+++ b/_RotatingBot/RotatingBot.ipynb
@@ -43,7 +43,7 @@
     "    \n",
     "    dqdt[1] = 0 # rotating laser bot can't move\n",
     "\n",
-    "    dqdt[2] = sin(t) # constant for now, but later will be u\n",
+    "    dqdt[2] = 0 # constant for now, but later will be u\n",
     "\n",
     "    return dqdt\n",
     "\n",
@@ -76,7 +76,7 @@
     "from Obstacle import Obstacle\n",
     "\n",
     "obsField = ObstacleField()\n",
-    "obsField.randomField(M=20)\n",
+    "obsField.randomField(M=7)\n",
     "for i in obsField.ObstaclesList:\n",
     "    i.computeTraj(psiworld,xworld,yworld)"
    ]
@@ -84,6 +84,73 @@
   {
    "cell_type": "code",
    "execution_count": 2,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAYMAAAERCAYAAACZystaAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAH0tJREFUeJzt3Xu0nHV97/H3NzsJSYgSLkXlJEikJFIQOBx0UQ4HRi5H\nSgUURUVBFKtd9FjwshCUWhI5R3uoKFhJu6gNhVYoFjE1QAuBMMJaKIdLAhGS5lC0kB5IAIMCue3s\n/T1/PLNhZ2f2nueZeS7fmfm81tqLvWeeGb5rZz+/z3x/v+di7o6IiPS3SVUXICIi1VMYiIiIwkBE\nRBQGIiKCwkBERFAYiIgIFYSBmS02s/VmtmrM439sZqvN7Odm9r/LrktEpJ9V0RlcC5w0+gEzezdw\nKnCIux8MfLOCukRE+lbpYeDu9wEbxzx8HvANdx9sbPN82XWJiPSzKGsGBwDHmNnPzKxuZkdUXZCI\nSD+ZXHUBDZOB3d39SDN7J/AD4G0V1yQi0jeihME64BYAd3/QzIbNbE93f3H0RmamCymJiLTB3W2i\n56NMEy0BjgMws3nA1LFBMMLdw39deumlldegOlVnt9aoOvP/SqP0zsDMbgSOBfY0s2eAPwUWA4sb\nh5tuAz5edl0iIv2s9DBw9zPHeersUgsREZHXRJkm6im1Wq3qElJRnfnqhjq7oUZQnVWwtPNJEZiZ\nd1O9IiIRmBneJQvIIiJSIYWBiIgoDERERGEgIiIoDEREBIWBiIigMBARERQGIiKCwkBERFAYiIgI\nCgMREUFhICIiKAxERASFgYiIoDAQEREUBiIigsJARERQGIiICAoDERFBYSAiIigMRESECsLAzBab\n2XozW9XkuS+a2bCZ7VF2XSIi/ayKzuBa4KSxD5rZHOBE4N9Lr0hEpM+VHgbufh+wsclT3wK+VHI5\nIiICTK66AAAzOw1Y5+6PmVnV5aQyPJx8jZic8TfpDkNDE2+T9T2zGBpKakhjYACK+mcZ+3uU1ib6\nuxjv76qdf8Pt27Ntn0Ynf0tp9pmqFbnPFq3y0s1sBvAVkimi1x4eb/sFCxa89n2tVqNWqxVV2oT+\n7u/gU59KvneHn/0M3vnO9K//0pfgiitg0ji92fAw3HsvHH1057WOtWUL7LVX8t9WhoZg0SI477z8\n64Dkd7ZyZXFh02uGh+H66+Gss5o/f/rp8OMf7/j7HB6Gyy6DSy5J//+55x44/vjx/z7bMTwMH/wg\n/OAH7b3+qqvgC1/It6Y8veENsLHZnEcF6vU69Xo902sqDwNgf2A/4NFGVzAbeNjM3uXuG8ZuPDoM\nqnTOOckXwO//PmzYqdKJPfssXHcdnH128+dPPRV+9avOahzPli3JJ5g0n/y++lV44YVi6oDkvZ96\nCt761uL+H73k8svhkUfGD4OHHoInn4S5c19/7Kqrkt9xFhs2wBlnwE03tV/rWMuXJ6HUruefzx5q\n/WrsB+WFCxe2fE3lYeDuq4A3jfxsZr8A/ou7FzQU5m/GDNi0KdtrNm9OXjeetIN1O7ZvT9/OFllH\n1loE5s9POsZmXn45+QAxNlinToVt27L9f7ZtS16XpylTYHCw/dcPDibvIcWo4tDSG4H7gXlm9oyZ\nfXLMJilnsuNoJww2bVIYZK1FYN48WLu2+XNr1iTPj51GaScMtm6FXXZpr8bxdBoG27YpDIpU+m7o\n7me2eP5tZdWSl3bDYPr08Z9XGEgzb3sbPP1080/ua9bA29++82vUGUgaQZdiuoumicqpRZJP67Nn\nwy9+sfNzq1fDgQfu/HivdAaDg/kHlLxOYZADTROVU4skxpsqyjMM1Bn0H4VBDjRNVE4tkpg/H/71\nX3d+PM9poqidgcKgOAqDHMyYAa++mu016gyy1yKJZp3B4GAydTRv3s7bR+oMstYxmhaQi6UwyEFR\nawadfIqaSJQwGDn7OOpJRFHNn79zGDz5JMyZ0/zTvDoDSUO7YQ40TdSeoaHk/XX2cTbz5u08TTTe\nFBEkYbB1a7b/R9Qw0AJycRQGOcgaBoODySUsJvqUM2VK74eBpojas88+yQlmv/nN64+Nt3gMsaaJ\n1BnEpTDIQdYwGJkimugTcZRBOEod8rpJk+CAA3acKso7DCJ2BlozKJbCIAdZw6DVFBHEGYSj1CE7\nGruIvGbN+GGwyy7qDKQ1hUEOdt01exhMtHgMcQbhKHXIjkYvIru3XjOI0hlkuXT6WAqDYikMctDu\nNNFEogzCRdYxOKgwaNfoReR162DmTJg1q/m2UdYMzJL7GbTbHWgBuVgKgxy0M02kMEjeV5/02jMy\nTTQ0BEuXjj9FBHE6g5FaOgkD/b0UR5/LcqA1g+LrkB3NmwePPw777Qd77w1f//r427YbBkV8Cu9k\n3UALyMXSrpiDoqaJev2kM4VB+2bNgquvTu4Ud8ghE2/b7jRREZ1BJ2GgzqBY2hVzMG1acvewtGfT\napooex2ys5HbrrYychkI9/Qn+BU1TaQwiEtrBjmYNOn1QEgjzTSRTjqTvAwMJH+jWW4mX8QCMnQe\nBlpALo7CICdZLlanziB7HdKZrFNF6gz6j8IgJ1nWDXRoafY6pDNZwyBiZ6AF5GIpDHKSJQx0NFH2\nOqQzWS9Wp86g/ygMcpI1DNQZKAzK1AudgcKgWAqDnGiaqNg6pDPdvmYwPJwcDTUwkH9NklAY5ETT\nRMXWIZ1pJwwidQYjXYHufVEchUFONE1UbB3SmSxXLh0eLu5SIe3e+lKLx8WrJAzMbLGZrTezVaMe\n+3MzW21mj5rZLWa2WxW1tSvLlUt1BnL2OqQzWTqDkfWCIj6Fd9oZSHGq6gyuBU4a89idwEHufiiw\nFvhy6VV1QNNExdYhnckaBkWsF4DCILJKwsDd7wM2jnlsmbsPN358AJhdemEdyHuaSGcgS56yhEFR\ni8fQWRjo7ONiRV0zOBe4veoistDRRMXWIZ1pZ5qoCOoM4gq3K5rZJcA2d7+h2fMLFix47ftarUat\nViunsBY0TZSddvDydHtnoAXkbOr1OvV6PdNrQoWBmX0COBk4frxtRodBJDNmwMaNrbcDHU3UTh3S\nmaxhoM6gu439oLxw4cKWrwmzK5rZScCFwLHunvL6n3H06qGlkyYlhxqmvTx3UXVIZ6IsILd7pzOF\nQfGqOrT0RuB+YL6ZPWNm5wJ/AcwElpnZCjNbVEVt7cq6ZtAt00RmybZZLn9cRB3SmSzXJoraGWgB\nuViV7IrufmaThxeXXkiOerUzGF1L3p/MFAblidIZaJoorqhHE3WdtGEwPJx88po2beLtopx0NlJL\nEcGkMChPt68ZaAG5eAqDnKQNgy1bkk9drebfI3YGVdch7VNnIK0oDHKSNgzSTBGBwkDy1e2HlioM\niqcwyEneYRDlDGRQGPSCLBeqizhNpAXk4ikMcpI2DNIcSQTqDCRf3T5NpDWD4ikMcpL2qqWaJmq/\nDmlfty8ga5qoeAqDnGjNoPg6pH3d3hkoDIqnMMjJ9OnJQO8+8XZpLlIHCgPJlzoDaUVhkJMpU5LD\nRVv9oae5SB28fujp8PDE27VDYdB/eqEz0AJysRQGOZoxA159deJt0k4TQZxBOEod0r5InYFuexmT\nwiBHadYNsoZBEWchKwz6Ty90BgqDYikMcpQmDNIeWgpxBuEi69AOXo6sF6pTGPQfhUGO8u4Mijrx\nLEoYDA6qMyhLpGkihUFMCoMcFTFN1MthoGmi8vTCNJEWkIulMMiRpomKrUPaF6UzaPfmNlpALp7C\nIEfqDIqtQ9rXC52BwqBYCoMcKQyKrUPa1wsXqlMYFEthkCNNExVbh7RPnYG0ojDIkTqDYuuQ9kVZ\nM9ACclwKgxyluXKpTjprvw5pX7ff3EYLyMVTGORI00TF1iHtyzpNFLEzUBgUS2GQI12bqNg6pH3d\n3hkoDIqnMMiRzkAutg5pnxaQpZXSw8DMFpvZejNbNeqxPcxsmZmtNbM7zWxW2XXlIW0YaJqovTqk\nfVmvTRRxmkgLyMWqojO4FjhpzGMXA8vcfR5wd+PnrpN2zaDKaSJ3GBqCgYH0r1EYdL+RzqDVzZcg\nZmegBeTilR4G7n4fsHHMw6cC1zW+vw54X6lF5aQbDi0dCQKz9K9RGHS/kX/zoaHW20btDBQGxYqy\nZvAmd1/f+H498KYqi2lXqzBwr36aqJ0BWGHQG9KuG0TsDBQGxQu3K7q7m9m4zeyCBQte+75Wq1Gr\n1UqoKp1WYTA4mNzOMu0fdT+EgXbw8oyEQavOVJ1B96vX69Tr9UyviRIG683sze7+nJm9Bdgw3oaj\nwyCaVmGQZYoIijnpLFoYqDMoT9rOoMhDSwcGkvt6Z1230gJyNmM/KC9cuLDla6JME/0YOKfx/TnA\nkgpraVuaMEg7RQS93xno5jblSnOxuuHhYjs2s/a6Ay0gF6+KQ0tvBO4H5pvZM2b2SeDPgBPNbC1w\nXOPnrrPXXrB+/fiLdFmOJILeDwN1BuVK0xmMnH2c5QCDrNoJA00TFa/0XdHdzxznqRNKLaQAe+4J\n++wDq1bBYYft/Hw700QKA8lL2jAoaopodB0Kg3iiTBP1jGOOgXvvbf5c1mmiIs5AVhj0rzRhUOTi\n8Qh1BjEpDHI2URg89BC8/e3p30udgeQpSmfQ7pqBFpCLpTDI2UgYNDvTc8kSeP/707+XwkDypM5A\nJqIwyNmcOcl9Ddas2fHxjRvhgQfgPe9J/169HAbDw8nXJP0FliZtGETsDBQGxdOuWIBmU0W33w61\nWhIUafVyGAwNJe9b5FErsqM0F6srYzpGYRBT6mHBzHYFPgYcDAwA04Bh4BXgZ8A/uvtwEUV2m2OO\ngeXL4Q//8PXHliyB92W84lIvh4GmiMrXrZ3ByElq+nspVqpfr5mdCPwOcKu7XzPmOQMOBb5gZne5\n+8r8y+wuxx4Ll16arBuYwZYtcOedsGhRtveJdAZyhDqkM1nOMyhS1jAY6QrURRar5e5oZtOAX7j7\nsmbPu7sDK4GVZvaOnOvrSvvvn3ya+eUvYe7cpEs49FD4rd/K9j5RPpFHqUM6062dgaaIytFyd3T3\nLWbmZnYRsBvwDPDTZh2Au6/a6Q36kFkyVfRXf5UcPfT978Npp2V/n8mT09+QJC2FQf/q1kNLFQbl\nSLuAfBzwQ5IbzxwP/E8ze9jMPlZYZV3u/PNh7drkvw88AB/4QPb3iDIIR6lDOtOth5YqDMqRdnec\nBMx097vNbLa7X2dmuwCnm9l57v6XBdbYlY46Cn70o87eo5fPQFYYlC/Nheo0TdS/0nYG1wA1M7sL\neJ+ZvRfYH/g/wMyiiut3UQbhourQDl6ubl1A1tnH5Ug1LDQWia80s6tJpox+FzgFeBG4sbjy+luv\nh4E6g3JpAVkmkuZool2AN7j7C+4+CNzR+Gq27b7u/nTONfatKINwEXXoXgbl69bOQGFQjpbTRO6+\nFTjSzD5qZk2vuWlmu5vZZ4C35l1gP+vlMFBnUL5InUGaO66NUBiUI+000a2N21F+3sz2Jjn7eAow\nBGwC1gF/7e6/LqzSPhTlZC+FQW+YOhVeeWXibdQZ9K/Uu6O7Pwt8vXFZipnuvr64sgTiDMJR6pDO\npLk2URmdQdab22gBuRzt7I5nAVvN7HTgBeAH7v4v+ZYlEGcQjlKHdEYnnclE2rlq6WbgCWAPdz8X\neGO+JcmIKINwlDqkM5HWDBQG8bQTBo8AHwHON7NPUMF9lPuFTjqTPCkMZCKZd0d3/znwBQAz2xPY\nkHdRkogyCEepQzqjQ0tlIh3tjuNdyVTyEWUQjlKHdKZbOwMtIJdDdzoLLMogHKUO6Yw6A5lIqDAw\nsy+b2eNmtsrMbmic/dy3ogzCUeqQzuhCdTKRMGFgZvsBnwYOd/d3kNxa8yNV1lS1KINwlDqkM+oM\nZCJhwgD4DTAIzDCzycAM4D+qLalaOgNZ8tStawYKg3KECQN3/xVwBfA08P+Al9z9rmqrqlaUQThK\nHdKZbr25jRaQyxFmdzSz/YHPAfsBvwb+0cw+5u7fH73dggULXvu+VqtRq9XKK7JkUQZh3c+gN+gM\n5P5Rr9ep1+uZXhMmDIAjgPvd/UUAM7sFOAoYNwx6Xa+HgTqDcmmaqH+M/aC8cOHClq8JM00ErCG5\nVPZ0MzPgBJLLXvStKGcgT5oE7jA8XG0d0pk0F6rTAnL/ChMG7v4ocD3wEPBY4+FrqquoelE+kZvl\nX4tublO+bu0Mtm1TGJQh1O7o7pcDl1ddRxRRwmB0LXl9alRnUL5uPrR0pu60XrgwnYHsLGIYVF2H\ntK9bOwNNE5VDYRCYwkDyFKkz0G0v41EYBBblpLORWhQG3a1VGDz7bHKQwKxZxdehziAehUFg6gwk\nTwMDyVFhQ0PNn7/tNnjPe4r/d9ECckwKg8AUBpIns4kvVrd0KZxySvF1tLNmoDOQi6cwCExhIHkb\nb6po82a45x74vd8rvgYtIMekMAhsYCCZw41wspfCoDeMFwbLl8Nhh8EeexRfg8IgJoVBYCMne403\nx9sOhUF/Gy8MypoiAoVBVNodgxsZhPPaGRQG/a1ZGLjDrbfCXSVdI1gLyDGpMwguyiAcpQ7pTLPr\nE61cCdOnw/z55dSgBeSYFAbBRRmEo9QhnTniCPjc5+Cll5Kft2yBK69MpojMyqlB00QxKQyCizII\nF1GHdvDy/e3fwrx5cOSRsHgxHHQQvPwyXHRReTUoDGLSZ7Pg8j4LOVIYqDMo35Qp8J3vwDXXJGGw\naFFyolnZNSgM4tHuGFyUQThKHZKPz3wm+aqCFpBj0jRRcFEG4Sh1SPcbCQP3dNtrAbkcCoPgogzC\nurmN5GXSpOQr7fkzmiYqh8IguLxvfdluGESpQ3pDlqkihUE5FAbB9WpnoDDobwqDeBQGwUUZhKPU\nIb0hSxhoAbkcCoPgogzCUeqQ3pDlBjdaQC6HwiC4KINwlDqkN2S59aWmicqhMAhOJ51JL9KaQTwK\ng+CiDMJR6pDekDYM3HXpkrKECgMzm2VmN5vZajN7wsyOrLqmqkUZhKPUIb0hbRgMDiY3eSrrInr9\nLNrueBVwu7t/0MwmA7tWXVDV8hyER26GPjBQbR2gMOh3WcJAi8flCLM7mtluwH9z93MA3H078Otq\nq6penoPwSBC08ylLYSB5yhIGmiIqR6RpornA82Z2rZk9YmZ/bWYzqi6qanme+dvJAKwwkDwpDOKJ\ntDtOBg4HPuvuD5rZlcDFwJ+O3mjBggWvfV+r1ajVaiWWWL48B+FoYaCdvH+lDQOdcNaeer1OvV7P\n9JpIYbAOWOfuDzZ+vpkkDHYwOgz6QS+HgTqD/pU2DDZv1ppBO8Z+UF64cGHL14SZJnL354BnzGxe\n46ETgMcrLCkEhYH0orRh8MMfQo83/2FE2x3/GPi+mU0F/g34ZMX1VC5SGGzZkk8dndYi3S9NGAwO\nwne/C//0T+XU1O9C7Y7u/ijwzqrriCTPM5DVGUgUacLgRz+CuXPh8MPLqanfhZkmkuYidQa6uY3k\nZddd4amnJt7mqqvgggvKqUcUBuH1ahioM+hvF18M3/wmrFjR/PkHH4R16+C008qtq58pDILrxTAY\nHk6+Jumvr28deCBcfTV84AOwceOOz23aBJdeCp/9rD4wlEm7Y3C9GAZDQ8n76Xoz/e1DH0o++Z9x\nBtx9N7z8MtTrcMghsMce8Ed/VHWF/UW5G1wvnoGsKSIZcfnl8LWvJZ3AihWw++6waBGcemrVlfUf\n7ZLBRRmEo9QhvWXKFLjssuT7rVuTiylOm1ZtTf1Ku2RweR7frzCQyHbZpeoK+pvWDIKLMghHqUNE\niqEwCK4XTzpTGIjEozAILsogHKUOESmGwiC4KINwlDpEpBgKg+CiDMJ516Fr1IvEojAIrlfDQJ2B\nSCwKg+CiDMJR6hCRYigMgtMZyCJSBoVBcFEG4Sh1iEgxFAbBRRmE86xD9zIQiUdhEFwvhoE6A5F4\nFAbB6QxkESmDwiC4KINwlDpEpBgKg+CiDMJR6hCRYigMgosyCEepQ0SKoTAILsogHKUOESlGuDAw\nswEzW2FmS6uuJQKddCYiZQgXBsAFwBOAV11IBFEG4Sh1iEgxQoWBmc0GTga+B1jF5YQQZRCOUoeI\nFCNUGADfBi4EhqsuJIoog3CU8x1EpBhhdkkzey+wwd1XmFltvO0WLFjw2ve1Wo1abdxNe0KUQVj3\nMxDpHvV6nXq9nuk1YcIAOAo41cxOBqYBbzSz693946M3Gh0G/SBSZ7B9O7iDdTiBp85ApFhjPygv\nXLiw5WvCTBO5+1fcfY67zwU+AiwfGwT9KEoYTJqUhMBwDhN4CgOReMKEQRM6mog4YZBnLQoDkXhC\nhoG7/8TdT626jghmzIBXXoHNmzt/L4WBiIwnZBjI62bNgmOPhRtu6Py9FAYiMh6FQRe44AK46qpk\n8bYTUcJg9WrYc8/O30dE8qMw6AInnJAMwj/5SWfvEyEMHn8c7rgDPvWpzt5HRPKlMOgCZnD++Ul3\n0ImXXurs+P43vxnuv7+zGi65BC66CHbbrbP3EZF8mXc691AiM/NuqjdPr74K++4LDz0Ec+dmf/2N\nNyYD8cMPw+67t1fDfffBhz4EK1YkwZDVT38KH/4wrF0L06a1V4OIZGdmuPuEZwgpDLrIhRfCk0/C\nTTfB1KnpX7dqFRx3HNx1Fxx6aGc1/MmfJIFy++3ZTj5zh1oNzjkHzj23sxpEJJs0YaBpoi7yta8l\ng+oppySHm6bx/PNw+unw7W93HgQAl14KL74IV1yR/jVbt8If/EHS3Xy8708jFIlJYdBFpk+Hm2+G\n2bOTT/orVoy/7fAwXHMNHHwwnHVW8pWHKVOSKafvfS+ZMtqwYeLtn3suqXXjRqjXdUipSFSaJupC\n7vCd7ySfzufMST5t77sv7L03PPtsssh7220wcyYsWpRPRzDW5s2wYAFcdx18+tNw4olw5JHJYL9p\nEzzyCFx/PdxyS3Jo7Fe/mlzSQkTKpzWDHrd9OyxdCkuWwPr1yddee8FRR8HRR8Pxxxc/AK9cmaxh\nLFsGjz2W1DR9Ovz2b8PZZ8NHPwr77FNsDSIyMYWBlGrbtqQzUAcgEkuaMNAMruQmyxFOIhKLPsOJ\niIjCQEREFAYiIoLCQEREUBiIiAgKAxERQWEgIiIoDEREBIWBiIigMBAREYKFgZnNMbN7zOxxM/u5\nmZ1fdU0iIv0gVBgAg8Dn3f0g4Ejgf5jZgRXXlFm9Xq+6hFRUZ766oc5uqBFUZxVChYG7P+fuKxvf\nvwKsBrruAsjd8geiOvPVDXV2Q42gOqsQKgxGM7P9gP8MPFBtJSIivS9kGJjZTOBm4IJGhyAiIgUK\nd3MbM5sC3Ar8s7tfOea5WMWKiHSJrrrTmZkZcB3wort/vup6RET6RbQwOBq4F3gMGCnsy+7+L9VV\nJSLS+0KFgYiIVCPkAnIaZvZFMxs2sz2qrqUZM7vMzB41s5VmdreZzam6pmbM7M/NbHWj1lvMbLeq\naxrLzM5onIg4ZGaHV13PWGZ2kpmtMbP/a2YXVV1PM2a22MzWm9mqqmuZSLeceGpm08zsgcb+/YSZ\nfaPqmsZjZgNmtsLMlk60XVeGQWNgPRH496prmcDl7n6oux8GLAEurbqgcdwJHOTuhwJrgS9XXE8z\nq4D3k0whhmJmA8B3gZOA3wHODHqi5LUkNUbXFSeeuvsW4N2N/fsQ4N2Nae6ILgCe4PWp96a6MgyA\nbwFfqrqIibj7y6N+nAm8UFUtE3H3Ze4+3PjxAWB2lfU04+5r3H1t1XWM413Ak+7+S3cfBP4BOK3i\nmnbi7vcBG6uuo5VuOvHU3Tc1vp0KDAC/qrCcpsxsNnAy8D1gwqOJui4MzOw0YJ27P1Z1La2Y2f8y\ns6eBc4A/q7qeFM4Fbq+6iC7zn4BnRv28rvGYdCj6iadmNsnMVgLrgXvc/Ymqa2ri28CFwHCrDScX\nX0t2ZrYMeHOTpy4hmcb476M3L6WoJiao8yvuvtTdLwEuMbOLSf5RPllqgQ2t6mxscwmwzd1vKLW4\nhjQ1BqUjMArQDSeeNjrqwxrrbHeYWc3d6xWX9Rozey+wwd1XmFmt1fYhw8DdT2z2uJkdDMwFHk1O\nSWA28LCZvcvdN5RYIjB+nU3cQIWfuFvVaWafIGkljy+loCYy/C6j+Q9g9MEBc0i6A2lT48TTHwJ/\n7+5Lqq6nFXf/tZndBhwB1CsuZ7SjgFPN7GRgGvBGM7ve3T/ebOOumiZy95+7+5vcfa67zyXZ6Q6v\nIghaMbMDRv14GrCiqlomYmYnkbSRpzUWxaKrrBMcx0PAAWa2n5lNBT4M/LjimrpW48TTvwGeGHsF\ngkjMbC8zm9X4fjrJAS2h9nF3/4q7z2mMlR8Blo8XBNBlYdBE5Bb9G2a2qjGnWAO+WHE94/kLkgXu\nZY3DzxZVXdBYZvZ+M3uG5OiS28zsn6uuaYS7bwc+C9xBcsTGTe6+utqqdmZmNwL3A/PM7Bkzq2TK\nMoX/CpxFcnTOisZXxKOg3gIsb+zfDwBL3f3uimtqZcLxUiediYhI13cGIiKSA4WBiIgoDERERGEg\nIiIoDEREBIWBiIigMBARERQGIiJC0GsTiXSTxiUUPkNyZcjl7v5vFZckkpk6A5HOXUBySYJ7gA9W\nXItIWxQGIh1oXGHzvY0bsrwVCHfbUJE0FAYinTkOeNnMzgHOY8cb3Yh0DYWBSGd+F/gbd7+O5Jrx\nP624HpG2KAxEOvMW4Ckz2wV4y8j9e0W6jcJApDMvAluB04FvVVyLSNt0PwORDpjZO4CTgFfc/S+r\nrkekXQoDERHRNJGIiCgMREQEhYGIiKAwEBERFAYiIoLCQEREUBiIiAgKAxERAf4/9c/QIdomajYA\nAAAASUVORK5CYII=\n",
+      "text/plain": [
+       "<matplotlib.figure.Figure at 0x110bcc990>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# Add laser\n",
+    "from LineCircleIntersect import intersect\n",
+    "laserLines = []\n",
+    "D = 100 # Number of discrete data points from laser\n",
+    "laseAngles = np.linspace(-math.pi,math.pi,D+1)[0:D]\n",
+    "\n",
+    "#S_max\n",
+    "S_maxdist = 14\n",
+    "S_max_t = np.linspace(-math.pi,math.pi,100)\n",
+    "S_max_x = S_maxdist*np.cos(S_max_t)\n",
+    "S_max_y = S_maxdist*np.sin(S_max_t)\n",
+    "\n",
+    "xlist = []\n",
+    "ylist = []\n",
+    "\n",
+    "laserDepths = laseAngles * 0.0\n",
+    "\n",
+    "\n",
+    "# Find laser depths at a certain point in time\n",
+    "# Need to not have this code copied\n",
+    "i = 0\n",
+    "for lasenum in range(len(laseAngles)):\n",
+    "\n",
+    "    x_laser_endpoint = S_maxdist*math.cos(laseAngles[lasenum])\n",
+    "    y_laser_endpoint = S_maxdist*math.sin(laseAngles[lasenum])\n",
+    "\n",
+    "    origin = np.array((0,0))\n",
+    "    laser_endpoint = np.array((x_laser_endpoint,y_laser_endpoint))\n",
+    "    for obs in obsField.ObstaclesList:\n",
+    "        Q = np.array((obs.xtraj[i],obs.ytraj[i]))\n",
+    "        r = obs.radius\n",
+    "        _, pt = intersect(origin,laser_endpoint,Q,r)\n",
+    "        if pt is not None:\n",
+    "            if (pt[0]**2 + pt[1]**2 < x_laser_endpoint**2 + y_laser_endpoint**2):\n",
+    "                x_laser_endpoint = pt[0]\n",
+    "                y_laser_endpoint = pt[1]\n",
+    "\n",
+    "    depth = math.sqrt(x_laser_endpoint**2 + y_laser_endpoint**2)\n",
+    "    laserDepths[lasenum] = depth\n",
+    "\n",
+    "%matplotlib inline\n",
+    "plt.plot(laseAngles,laserDepths)\n",
+    "plt.xlabel(r'$\\theta$')\n",
+    "plt.ylabel(r'$s(\\theta)$')\n",
+    "plt.show()\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -96,14 +163,7 @@
     "#ax = fig.add_subplot(121, autoscale_on=False, xlim=(-15, 15), ylim=(-15, 15))\n",
     "#ax.grid()\n",
     "\n",
-    "#S_max\n",
-    "S_maxdist = 14\n",
-    "S_max_t = np.linspace(-math.pi,math.pi,100)\n",
-    "S_max_x = S_maxdist*np.cos(S_max_t)\n",
-    "S_max_y = S_maxdist*np.sin(S_max_t)\n",
-    "\n",
-    "\n",
-    "im = plt.imread('bot.jpg')\n",
+    "im = plt.imread('bot.png')\n",
     "newax = fig.add_axes([0.477, 0.46, 0.07, 0.1], anchor='SW')\n",
     "newax.imshow(im)\n",
     "newax.axis('off')\n",
@@ -114,21 +174,10 @@
     "time_template = 'time = %.1fs'\n",
     "time_text = ax.text(0.05, 0.9, '', transform=ax.transAxes)\n",
     "\n",
-    "\n",
-    "# Add laser\n",
-    "from LineCircleIntersect import intersect\n",
-    "laserLines = []\n",
-    "D = 100 # Number of discrete data points from laser\n",
-    "laseAngles = np.linspace(-math.pi,math.pi,D+1)[0:D]\n",
-    "\n",
     "for index in range(D):\n",
     "    lobj = ax.plot([],[],'-',lw=0.5,color='red')[0]\n",
     "    laserLines.append(lobj)\n",
-    "x1,y1 = [],[]\n",
-    "x2,y2 = [],[]\n",
     "\n",
-    "\n",
-    "    \n",
     "def init():\n",
     "    S_max.set_data([], [])\n",
     "    obstacles.set_data([], [])\n",
