--- a/_Plane/Plane.ipynb
+++ b/_Plane/Plane.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -11,8 +11,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n",
       "integrating...\n",
       "done\n"
      ]
@@ -43,7 +41,7 @@
     "    \n",
     "    dqdt[0] = -v*sin(state[2])\n",
     "    dqdt[1] = -v*cos(state[2]) \n",
-    "    dqdt[2] = 1\n",
+    "    dqdt[2] = sin(2*t)\n",
     "    \n",
     "    return dqdt\n",
     "\n",
@@ -109,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -124,9 +122,9 @@
     },
     {
      "data": {
-      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAYQAAAEPCAYAAABCyrPIAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAEnNJREFUeJzt3X2wXHddx/H3l6bQXkp7qY1tpU+oMFKobTC2PE6XJydm\nkBaGKChjAcfrMGqrojx1xkQZBwUpzOjYMdDSMnKrQaS2YmzTNjd2RiwjNiRtWi8UWlq1KQ9JSQfB\nSr7+cX632dzuvXd3s3fP2bvv18zOPbvnnN3vPtzz2d/vnD2/yEwkSXpK3QVIkprBQJAkAQaCJKkw\nECRJgIEgSSpW1V1ALyLCQ6IkqQ+ZGUstM3IthMxs/GXjxo2112Cd1mmd1jh36dbIBYIkaXkYCJIk\nwEBYFq1Wq+4SumKdg2WdgzUKdY5Cjb2IXvqX6hYROUr1SlITRAS5EncqS5KWh4EgSQIMBElSYSBI\nkgADQZJUGAiSJMBAkCQVBoIkCTAQJEmFgSBJAmoIhIg4PSK2R8TdEXFXRFxabj8xIrZFxGxE3BwR\nk8OuTZLG2dDPZRQRpwCnZObOiDgO+CJwMfA24JuZ+cGIeDfwzMx8z7x1PZeRJPWosecyysyHM3Nn\nmX4MuAd4FvA64Nqy2LVUISFJGpJa9yFExFnAGuAO4OTM3Ftm7QVOrqksSRpLtY2pXLqLPgNclpkH\nIg61ZjIzR2n85KkpmJ2FiQlYvRoeeADuuw/OPBOOP/7QbUvN72edUbzPiQmYnobJLvYSzb22TXwe\n7fM7PZ9BfS56ecx+Prcr8XOz2HvQ72P281k80vdo6Goa3/No4Cbgt9puu5dq3wLAqcC9HdbLjRs3\nPnHZvn17NsGFF2ZCdVm9+tB0p9uWmt/POk25z5NO6v4+N2zo/bVt8mvT6fkM8nPR7WP2+7kdlc9i\nr895ofegn8fs57N4pO9Rv7Zv337YtrLa1C+9ba7jKKMArgL2ZOZH22bdAFxSpi8Bru+0/qZNm564\nNGW0oomJ6u/atXDuudX0CSc8+bal5vezTpPu87zzurvPtWth82a6MvfaNv216fR8BvW56OUxe7HY\na9vE17uf59zpPej3Mfv5LB7pe9SvVqt12Laya92kxiAvwMuAg8BO4M5yWQecCNwCzAI3A5Md1l2m\nPD0y+/ZV3wT27Ts0ff/9T75tqfn9rDOK97lvX++vbROfR/v85fxc9PKY/XxuV+LnZrH3oN/HrOM9\nGhS6bCE4hKYkrXCNPexUktRMBoIkCTAQJEmFgSBJAgwESVrQ1BS0WrB+PezfX3c1y89AkKQFzM7C\njh2wdWsVDiudgSBJC2j/YVtdPzIbJn+HIEkL2L+/ahls3jxi5ySap9vfIRgIkrTC+cM0SVJPDARJ\nEmAgSJIKA0GSBBgIkqTCQJAkAQaCJKkwECRJgIEgSSoMBEkrzridpXRQDARJK864naV0UAwESSvO\nuJ2ldFA8uZ2kFWelnKV0UDzbqVSDqamqu2JiAqan3RipGQwEaYjmgmDXLti3r7ptwwbYsqXeusaJ\nYbywbgNh1TCKkVa6uZ2Yc+y7Hr7292BqyjDuh4EgDcDcTsw1a+CMM+Caa/yGOmzuSD5ydhlJA+BO\nzPr5HizMfQiSJMAhNCVJPTIQJEmAgSBJKgwESRJgIEiSCgNBkgQYCJKkwkCQJAEGgiSpMBAkSYCB\nIEkqDARJEmAgqAZTU9Bqwfr11RkqJTWDgaChmxvIZOvWKhwkNUMtgRARV0fE3ojY3Xbbpoh4KCLu\nLJd1ddSm5edAJlIz1TIeQkS8HHgM+GRmnlNu2wgcyMwrFlnP8RBWAAcykYar0WMqZ+btEXFWh1lL\nFqzRNznpeLdSEzVtH8JvRsSXIuKqiPC7oyQNUS0thAVcCfxhmX4/8GHgV+YvtGnTpiemW60WrVZr\nCKVJ0uiYmZlhZmam5/VqG1O5dBndOLcPoZt57kOQpN6N3JjKEXFq29XXA7sXWlaSNHi1dBlFxHXA\nhcBJEfEgsBFoRcR5QAJfA36tjtokaVzV1mXUD7uMJKl3I9dlJEmql4EgSQIMBElSYSBIkgADQZJU\nGAiSJMBAkCQVBoIkCTAQJEmFgSBJAgwESVJhIEiSAANBklQYCJIkwECQJBUGgiQJMBAkSYWBIEkC\nDARJUmEgSJIAA0GSVBgIkiTAQJAkFQaCJAkwECRJhYEgSQIMBElSYSBIkgADQZJUGAiSJABWdbtg\nRDwd+CXgBcBRwDHAQeAx4F+BT2fmweUoUivX1BTMzsLEBExPw+Rk3RVJ4ysyc+mFIl4DnA38Q2be\nN29eAOcCrwZuycydy1Foeazspl6NjlYLduyopjdsgC1bai1HWpEigsyMpZZbsoUQEccAX8vMbZ3m\nly30TmBnRJzTc6UaaxMT1d+1a2Hz5nprkcZdty2EHwPeCJwAPAh8fjlbAovUYQthhdm/v+o22rzZ\n7iJpuXTbQug2EH4V2A6cCbyDav/BqcAVmfmpI6y1awbCeHC/gjRY3QZCt0cZPQU4LjNvBW7MzNcC\nLwEORsQ7jqBO6UlmZ6v9Clu3VuEgaTi6PcpoM3BZRPwpcCAivgV8FfgC8IblKk7jZa5lcPfd1XX3\nK0jD1VWX0RMLRxwNvBJ4MVWX0beA6zJz9/KU96THt8toBWs/4ui002D3bruLpEEY5FFGTwOekZnf\nzMzHgZvKpdOyZ2Tm13uuVuLwI462bTMMpGFbch9CZn4feFFE/GJEHNtpmYh4ZkRMUe10lvoyPV39\nFsEwkOrRdZdRRJwKvA34YaqjjI4GfgB8F3gI+FhmPrpMdc7VYJeRJPVooIedzrvjp1MdcbS33+L6\nZSBIUu8Gfdhpu7cAPxsRN0TE1RGxro/iro6IvRGxu+22EyNiW0TMRsTNEWGngSQNUT+B8D/AHuDE\nzHw7cHwf9/EJYH6QvAfYlpnPBW4t1yVJQ9JPIPw78Cbg0oh4Kz2cMXVOZt4O7Jt38+uAa8v0tcDF\nfdQmSepTPxvzu4DfAYiIHwIeGVAtJ7ftl9gLnDyg+5UkdaHnQGi30BlQj1RmZkR03Hu8adOmJ6Zb\nrRatVms5SpCkkTUzM8PMzEzP6/V8lNGgRMRZVOdFOqdcvxdoZebD5RDX7Zn5E/PW8SgjSerRch5l\ntFxuAC4p05cA19dYi6QRMTVVnfZk/frqdOrqXy0thIi4DrgQOIlqf8HvA38PbAHOAO4Hfj4z989b\nzxaCNKYWOi26o+4tbWDnMloOmfnmBWa9eqiFSBoZc6dFhyoc5jb8jro3OE3qMpKkBbVv+I899lA3\n0ZVXeg6sQaltp3I/7DKSxlf7cKsXX2w3US8a3WUkSb2anLSbaLnZQpA0ctpbC3YTLW3ZznZaJwNB\nkno3ir9DkCTVyECQJAEGgiSpMBAkSYCBIEkqDARJEmAgSJIKA0GSBBgIkqTCQJAkAQaCJKkwECRJ\ngIEgSSoMBEkSYCBIkgoDQZIEGAiSpMJAkCQBBoIkqTAQJEmAgSBJKgwESRJgIEiSCgNBkgQYCJKk\nwkCQJAEGgiSpMBAkSYCBIEkqDARJEmAgSJIKA0GSBBgIkqTCQJAkAQaCJKkwECRJgIEgjaypKWi1\nYP162L+/7mq0Eqyqu4D5IuJ+4DvAD4DHM/P8eiuSmml2FnbsqKanpmDLlqXXmZqq1puYgOlpmJxc\n3ho1WhoXCEACrcz8dt2FSE02MVH9XbsWNm/ubp1+QkTjo6ldRlF3AVLTTU/Dhg2wbVv33/T7CRGN\nj8jMums4TER8FXiUqsvoLzPzY23zsmn1SnXrpRto//5q+c2b7S4aJxFBZi75RbuJXUYvzcz/jojV\nwLaIuDczb5+buWnTpicWbLVatFqt4VcoNchS3UDzA8NuopVvZmaGmZmZntdrXAuhXURsBB7LzA+X\n67YQpHnWr4etW6tuoLPPhgceqDb+q1dX07t2wb591bIbNhgI46jbFkKjAiEiJoCjMvNARDwduBn4\ng8y8ucw3EKR52ruBLr74UGth9Wr4xjcOLbd2bW/7G7RyjGqX0cnAZyMCqto+NRcGkjqbnDz0rb99\np/HkJNxyC6xZA2ecAddcYxhocY1qISzFFoK0uPbWArgDWZWR7DJaioEgSb3rNhCa+jsESdKQGQiS\nJMBAkCQVBoIkCTAQJEmFgSBJAgwESVJhIEiSAANBklQYCJIkwECQJBUGgiQJMBAkSYWBIEkCDARJ\nUmEgSJIAA0GSVBgIkiTAQJAkFQaCJAkwECRJhYEgSQIMBElSYSBIkgADQZJUGAiSJMBAkCQVBoIk\nCTAQJEmFgSBJAgwESVJhIEiSAANBklQYCJIkwECQJBUGgiQJMBAkSYWBIEkCDARJUmEgSJKAhgVC\nRKyLiHsj4ssR8e6665GkcdKYQIiIo4A/B9YBZwNvjojn1VtVf2ZmZuouoSvWOVjWOVijUOco1NiL\nxgQCcD7wlcy8PzMfB/4auKjmmvoyKh8S6xws6xysUahzFGrsRZMC4VnAg23XHyq3SZKGoEmBkHUX\nIEnjLDKbsR2OiBcBmzJzXbn+XuBgZv5J2zLNKFaSRkxmxlLLNCkQVgH/AbwK+C/gC8CbM/OeWguT\npDGxqu4C5mTm/0XEbwA3AUcBVxkGkjQ8jWkhSJLq1aSdyj2JiHdGxMGIOLHuWjqJiPdHxJciYmdE\n3BoRp9ddUycR8aGIuKfU+ncRcULdNXUSERsi4u6I+EFEvLDuetqNyg8qI+LqiNgbEbvrrmUhEXF6\nRGwv7/VdEXFp3TV1EhHHRMQd5f97T0R8oO6aFhMRR0XEnRFx42LLjWQglI3ra4AH6q5lER/MzHMz\n8zzgemBj3QUt4Gbg+Zl5LjALvLfmehayG3g98M91F9JuxH5Q+QmqOpvsceC3M/P5wIuAX2/i65mZ\n3wNeUf6/fxJ4RUS8rOayFnMZsIcljuYcyUAArgDeVXcRi8nMA21XjwO+WVcti8nMbZl5sFy9Azit\nznoWkpn3ZuZs3XV0MDI/qMzM24F9ddexmMx8ODN3lunHgHuAH6m3qs4y87tl8qlU+z2/XWM5C4qI\n04D1wMeBRY80GrlAiIiLgIcyc1fdtSwlIv4oIr4OXAL8cd31dOHtwD/WXcSI8QeVyyQizgLWUH1R\naZyIeEpE7AT2Atszc0/dNS3gI8DvAQeXWrAxRxm1i4htwCkdZl1O1aXxM+2LD6WoDhap832ZeWNm\nXg5cHhHvoXpT3jbUAoul6izLXA78b2ZOD7W4Nt3U2UAelbEMIuI44G+By0pLoXFKy/q8st/tpoho\nZeZMzWUdJiJeCzySmXdGRGup5RsZCJn5mk63R8QLgGcDX4oIqLo3vhgR52fmI0MsEVi4zg6mqfGb\n91J1RsRbqZqUrxpKQQvo4fVskv8E2g8YOJ2qlaA+RcTRwGeAv8rM6+uuZymZ+WhEfA5YC8zUXM58\nLwFeFxHrgWOA4yPik5n5y50WHqkuo8y8KzNPzsxnZ+azqf7xXlhHGCwlIp7TdvUi4M66allMRKyj\nak5eVHaUjYLaWoUd/BvwnIg4KyKeCvwCcEPNNY2sqL7pXQXsycyP1l3PQiLipIiYLNPHUh3k0rj/\n8cx8X2aeXraXbwJuWygMYMQCoYMmN9c/EBG7Sx9jC3hnzfUs5M+odnpvK4el/UXdBXUSEa+PiAep\njjz5XERsrbsmqH5QCcz9oHIP8DdN/UFlRFwH/Avw3Ih4MCJq6cJcwkuBt1AdtXNnuTTxyKhTgdvK\n//cdwI2ZeWvNNXVj0W2mP0yTJAGj30KQJA2IgSBJAgwESVJhIEiSAANBklQYCJIkwECQJBUGgiQJ\naOi5jKRhKqdLmKI6G+RtmXlfzSVJtbCFIFWDh9wBbAfeWHMtUm0MBI21cmbN15ZBWc4EGjmEqDQM\nBoLG3SuBAxFxCfAODh/sRhorBoLG3YuBqzLzWqrzxX++5nqk2hgIGnenAl+NiKcBp86N5zsnIp4R\nEZuHVUxE/HhEbBzW40ntDASNu28B3wfeAFzRYf73gPuHWM8JwI4hPp70BMdD0FiLiHOAdcBjmXll\nRKwFfg74J6qN8wFgAvgy1eA851GNiLYO+CxwdmZ+KiKeB1wAPALsphq68PhyPxcAq4HPAeeX6U8D\nZ1ONpvdQua8LgJ8GLs/M7y/7k5fmsYWgsZaZuzPzQ5l5Zbnp68B+YB9wCtU+hp1Uh6ZuAR4FHgYe\nAB4HvlvWexewC7ivTG/JzI8Bv0s1PvAq4MoyfRTwTKqWx67M/Ei5/08De8v9SkNnIEiHexXwHeDl\nwDRVAPwo8BWqQdSfRjXE4y3AT3EoEG4rfyeoxtZdU1obO6m++e+j2uBfAOzPzC9TDRd5S1lv7v6P\noWo5SENnl5FURMQxwMeBSzPz23XXIw2bgSBJAuwykiQVBoIkCTAQJEmFgSBJAgwESVJhIEiSAANB\nklQYCJIkAP4f9Vp0a8rS3tgAAAAASUVORK5CYII=\n",
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAYQAAAEPCAYAAABCyrPIAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAElNJREFUeJzt3X+wXGddx/H3l6a0XEIbaq9tpD9FGCnUtCW2/HK6UHFi\nplJwiPJrLODMdRi1qJhS6Iy5ig4Kw48ZHTMGWqaOpJqK1FYM9KbNjZ0Ry4gNpE1roNLQqk0L5EI7\nCNbm6x/nuc02vT929+7dczb7fs3s5OyePed+dze7n32e5+x5IjORJOkZdRcgSWoGA0GSBBgIkqTC\nQJAkAQaCJKlYUXcB3YgID4mSpB5kZix2n6FrIWRm4y+bNm2qvQbrtE7rtMbZS6eGLhAkScvDQJAk\nAQbCsmi1WnWX0BHr7C/r7K9hqHMYauxGdNO/VLeIyGGqV5KaICLIo3FQWZK0PAwESRJgIEiSCgNB\nkgQYCJKkwkCQJAEGgiSpMBAkSYCBIEkqDARJElBDIETE6RGxMyLujoi7IuKKcvtJETEVEfsi4paI\nWDXo2iRplA38XEYRcSpwambujoiVwJeB1wPvAL6VmR+KiPcCz83Mq47Y1nMZSVKXGnsuo8x8KDN3\nl+XHgHuA5wGvA64rd7uOKiQkSQNS6xhCRJwFnA/cAZySmQfKqgPAKTWVJUkjqbY5lUt30WeAd2fm\noxGHWzOZmcM0f/LEBOzbB2NjMD4O+/fDfffBmWfCCSccvm2x9b1ss9R9jo3B1q2watXcj2lQdfbz\ncXT6etRR57C8HvNtM1dtS3mf9OO56fR92E3t/Xq+l/J81aKm+T2PBb4A/FbbbfdSjS0ArAbunWO7\n3LRp05OXnTt3ZhNcfHEmVJfx8cPLc9222PpetlnqPjdsWPgxdbrPk09uxuPo5vWoo85BvR7L8Tjm\nqm2p75OlPjedvg+7qb1fz/dSnq+l2Llz51M+K6uP+sU/m+s4yiiAa4C9mfnxtlU3AZeX5cuBG+fa\nfnJy8slLU2YrGhur/l27FtasqZZPPPHpty22vpdtlrrPtWthy5b5H1M3+zzvvGY8jk5fjzrqHOTr\nsRyPY67aOjXX69KP52ah/bfvs5va+/V8L+X5WopWq/WUz8qOdZIa/bwArwIOAbuBO8tlHXASsAPY\nB9wCrJpj22XK06U5eLD6JnDw4OHl++9/+m2Lre9lm6Xu8+DBhR/ToOrs5+No8vM9LK/HfNv0+33S\nj+em09e9l1qX+nw3BR22EJxCU5KOco097FSS1EwGgiQJMBAkSYWBIEkCDARJUmEgSJIAA0GSVBgI\nkiTAQJAkFQaCJAkwECRJhYGgo8LEBLRasH49zMzUXY00nAwEHRX27YNdu2D79iocJHXPQNBRof1c\n+HWdg14adp7+WkeFmZmqZbBly5BNWSgNQKenvzYQJOko53wIkqSuGAiSJMBAkCQVBoIkCTAQJEmF\ngSBJAgwESVJhIEiSAANBklQYCJIkwECQJBUGgiQJMBAkSYWBIEkCDARJUmEgSJIAA0GSVBgIkiTA\nQJAkFQaCJAkwECRJhYEgSQIMBElSYSBIkgADQZJUGAiSJKCmQIiIayPiQETsabttMiIejIg7y2Vd\nHbVJ0qiqq4XwKeDID/wEPpqZ55fL52uoS5JGVi2BkJm3AwfnWBWDrkWSVGnaGMJvRsRXIuKaiFhV\ndzGSNEpW1F1Am83AH5TlDwAfAX71yDtNTk4+udxqtWi1WgMoTZKGx/T0NNPT011vF5nZ/2o6+cMR\nZwE3Z+a5na6LiKyrXkkaVhFBZi7aJd+YLqOIWN129Q3AnvnuK0nqv1q6jCLieuBi4OSIeADYBLQi\n4jyqo42+AfxaHbVJ0qiqrcuoF3YZSVL3hq7LSJJULwNBkgQYCJKkwkCQGmpiAlotWL8eZmbqrkaj\nwECQGmrfPti1C7Zvr8JBWm4GgtRQY2PVv2vXwpYt9dai0dCkU1dII29iomoZjI3B5s2wcWMVBqs8\ns5cGwECQGmS2mwiqMNi2rd56hkF7iG7danguhV1GUoPYTdQ9x1r6x0CQGmTrVtiwAaam/KbbKUO0\nfzx1xYhrb26Pj8P+/Ta9NVxmZqr/x461zK/TU1cYCCOu1TrcZz0+Do88Ui1v2GD/tZrFsYLeeS4j\ndaS9ub1mzeFlm95qGscKlp+BMOLa+6xvuMH+azWXYwXLzy4jSUPBsYLeOYYg6ajleEJ3HEOQdNRy\nPGF5GAiSho7jCcvDLiNJQ8fxhO44hiBJAhxDkCR1yUCQJAEGgiSpMBAkSYCBIEkqDARJEmAgSJIK\nA0GSBBgIkqTCQJAkAbCi0ztGxLOBtwIvAY4BjgcOAY8B/wLckJmHlqNISdLy6+hcRhHxWuAc4B8y\n874j1gWwBvhZYEdm7l6OQsvf8lxGktSlvp3cLiKOB07LzK938EfPzcw9nZfZHQNBkrrX17OdRsTz\ngTcCJwIPAF9czpbAAnUYCJLUpX6f7fQ1wGeAW4FLgD+MiC9HxFuXUKMkqUE6DYRnACsz81bg5sy8\nFHgFcCgi3rVs1UmSBqbTQNgCtCJiB/D6iLgUeD7wJWDlchUnSRqcrmZMi4hjqbqPXg6sBr4NXL+c\nA8lH/H3HECSpS/08yug44DmZ+a0O/ugZmfnNzsvsjoEgSd3r26ByZv4QeFlEvCUinjXPH3tuREwA\nZ3ZfqiSpCTruMoqI1cA7gB+l+pXyscATwPeBB4FPZOZ3l6nO2RpsIUhSl/r6O4QjdvxsqiOODvRa\nXK8MBEnqXr9/h9DubcDPR8RNEXFtRKzrobhrI+JAROxpu+2kiJiKiH0RcUtErOqhNklSj3oJhP8B\n9gInZeY7gRN62MengCOD5CpgKjNfSPUDuKt62K8kqUe9BMK/AW8CroiIt9PFGVNnZebtwMEjbn4d\ncF1Zvg54fQ+1SZJ61MuH+V3A7wBExI8AD/epllPaxiUOAKf0ab+SpA50HQjtMnOqX4Ucsd+MiDlH\njycnJ59cbrVatFqt5ShBkobW9PQ009PTXW/X9VFG/RIRZ1GdF+nccv1eoJWZD5VDXHdm5k8esY1H\nGUlSl5bzKKPlchNweVm+HLixxlokaeTU0kKIiOuBi4GTqcYLfg/4e2AbcAZwP/BLmTlzxHa2ECSp\nS8v2w7Q6GQiS1L1h7DKSJNXIQJAkAQaCJKkwECRJgIEgSSoMBEkSYCBIkgoDQZIEGAiSpMJAkCQB\nBoIkqTAQJEmAgSBJKgwESRJgIEiSCgNBkgQYCJKkwkCQJAEGgqQRMTEBrRasXw8zM4vefSQZCJJG\nwr59sGsXbN9ehcORDAwDQdKIGBur/l27FrZsefr6xQJjFBgIkkbC1q2wYQNMTcGVVz69NbBYYIyC\nyMy6a+hYROQw1SupmVqtqjUAMD5ehcDmzbBxYxUGq1bVWl7fRQSZGYvdb8UgipGkJpltDaxcCY88\nUnUTbdwI27bVW1fdbCFIGjkzM9U4wcGDsGNH1UKYmjr6WgazOm0hGAiSRtZsMByN3UTtDARJEtB5\nIHiUkSQJMBAkSYWBIEkCDARJUmEgSJIAA0GSVBgIkiTAQJAkFQaCJAkwECRJhYEgSQIMBEnLzKkp\nh4eBIGlZOTXl8DAQJHWsl2/7Tk05PAwESR3r5dt++1zGR/OcA0eDxk2hGRH3A98DngAez8wL661I\n0qxevu2vWuXUlMOicRPkRMQ3gJdm5nfmWOcEOVKNOp1hbGKiak2MjVUtBFsG9RraGdNKIKzNzG/P\nsc5AkBpgsQ/8VqvqWoKqu8gWQr06DYTGdRkBCeyIiCeAv8jMT9RdkKSnmh1LALjgAjjjjCocxsdh\n/364++5qnQPJw6WJgfDKzPzviBgHpiLi3sy8fXbl5OTkk3dstVq0Wq3BVyiNuPaxhOOOOxwO4+Pw\nyCPV8mmnOZBcl+npaaanp7vernFdRu0iYhPwWGZ+pFy3y0hqgPaxhLe8pTrqaO3a6sN/x45q2TBo\njqEcQ4iIMeCYzHw0Ip4N3AL8fmbeUtYbCFLDtIcDdDborMEa1kA4G/hsuboC+HRmfrBtvYEgSV0a\nykBYjIEgSd3rNBD8pbIkCTAQJEmFgSBJAgwESVJhIEiSAANBklQYCJIkwECQJBUGgiQJMBAkSYWB\nIEkCDARJUmEgSJIAA0GSVBgIkiTAQJAkFQaCJAkwECRJhYEgSQIMBElSYSBIkgADQZJUGAiSJMBA\nkCQVBoIkCTAQJEmFgSBJAgwESVJhIEiSAANBklQYCJIkwECQJBUGgiQJMBAkSYWBIEkCDARJUmEg\nSJIAA0GSVBgIkiTAQJAkFQaCJAloWCBExLqIuDcivhYR7627HkkaJY0JhIg4BvgzYB1wDvDmiHhR\nvVX1Znp6uu4SOmKd/WWd/TUMdQ5Djd1oTCAAFwJfz8z7M/Nx4K+By2quqSfD8p/EOvvLOvtrGOoc\nhhq70aRAeB7wQNv1B8ttkqQBaFIgZN0FSNIoi8xmfA5HxMuAycxcV66/DziUmX/Sdp9mFCtJQyYz\nY7H7NCkQVgD/DlwC/BfwJeDNmXlPrYVJ0ohYUXcBszLz/yLiN4AvAMcA1xgGkjQ4jWkhSJLq1aRB\n5a5ExHsi4lBEnFR3LXOJiA9ExFciYndE3BoRp9dd01wi4sMRcU+p9e8i4sS6a5pLRGyIiLsj4omI\nuKDuetoNyw8qI+LaiDgQEXvqrmU+EXF6ROwsr/VdEXFF3TXNJSKOj4g7yvt7b0R8sO6aFhIRx0TE\nnRFx80L3G8pAKB+urwX2113LAj6UmWsy8zzgRmBT3QXN4xbgxZm5BtgHvK/meuazB3gD8E91F9Ju\nyH5Q+SmqOpvsceC3M/PFwMuAX2/i85mZPwBeXd7fPwW8OiJeVXNZC3k3sJdFjuYcykAAPgpcWXcR\nC8nMR9uurgS+VVctC8nMqcw8VK7eAZxWZz3zycx7M3Nf3XXMYWh+UJmZtwMH665jIZn5UGbuLsuP\nAfcAP1ZvVXPLzO+XxWdSjXt+p8Zy5hURpwHrgU8CCx5pNHSBEBGXAQ9m5lfrrmUxEfFHEfFN4HLg\nj+uupwPvBP6x7iKGjD+oXCYRcRZwPtUXlcaJiGdExG7gALAzM/fWXdM8PgZsBA4tdsfGHGXULiKm\ngFPnWHU1VZfGz7XffSBFzWGBOt+fmTdn5tXA1RFxFdWL8o6BFlgsVme5z9XA/2bm1oEW16aTOhvI\nozKWQUSsBP4WeHdpKTROaVmfV8bdvhARrcycrrmsp4iIS4GHM/POiGgtdv9GBkJmvnau2yPiJcDZ\nwFciAqrujS9HxIWZ+fAASwTmr3MOW6nxm/didUbE26malJcMpKB5dPF8Nsl/Au0HDJxO1UpQjyLi\nWOAzwF9l5o1117OYzPxuRHwOWAtM11zOkV4BvC4i1gPHAydExF9m5q/Mdeeh6jLKzLsy85TMPDsz\nz6Z6411QRxgsJiJe0Hb1MuDOumpZSESso2pOXlYGyoZBba3COfwr8IKIOCsingn8MnBTzTUNrai+\n6V0D7M3Mj9ddz3wi4uSIWFWWn0V1kEvj3uOZ+f7MPL18Xr4JuG2+MIAhC4Q5NLm5/sGI2FP6GFvA\ne2quZz5/SjXoPVUOS/vzuguaS0S8ISIeoDry5HMRsb3umqD6QSUw+4PKvcDfNPUHlRFxPfDPwAsj\n4oGIqKULcxGvBN5GddTOneXSxCOjVgO3lff3HcDNmXlrzTV1YsHPTH+YJkkChr+FIEnqEwNBkgQY\nCJKkwkCQJAEGgiSpMBAkSYCBIEkqDARJEtDQcxlJg1ROlzBBdTbI2zLzvppLkmphC0GqJg+5A9gJ\nvLHmWqTaGAgaaeXMmpeWSVnOBBo5hag0CAaCRt1rgEcj4nLgXTx1shtppBgIGnUvB67JzOuozhf/\nxZrrkWpjIGjUrQb+IyKOA1bPzuc7KyKeExFbBlVMRPxERGwa1N+T2hkIGnXfBn4I/CLw0TnW/wC4\nf4D1nAjsGuDfk57kfAgaaRFxLrAOeCwzN0fEWuAXgM9TfTg/CowBX6OanOc8qhnR1gGfBc7JzE9H\nxIuAi4CHgT1UUxeeUPZzETAOfA64sCzfAJxDNZveg2VfFwE/DVydmT9c9gcvHcEWgkZaZu7JzA9n\n5uZy0zeBGeAgcCrVGMNuqkNTtwHfBR4C9gOPA98v210JfBW4ryxvy8xPAL9LNT/wCmBzWT4GeC5V\ny+Ormfmxsv8bgANlv9LAGQjSU10CfA/4GWArVQD8OPB1qknUj6Oa4nEH8FIOB8Jt5d8xqrl1zy+t\njd1U3/wPUn3gXwTMZObXqKaL3FG2m93/8VQtB2ng7DKSiog4HvgkcEVmfqfueqRBMxAkSYBdRpKk\nwkCQJAEGgiSpMBAkSYCBIEkqDARJEmAgSJIKA0GSBMD/A3ImkuH8KsMUAAAAAElFTkSuQmCC\n",
       "text/plain": [
-       "<matplotlib.figure.Figure at 0x10d294bd0>"
+       "<matplotlib.figure.Figure at 0x109483d50>"
       ]
      },
      "metadata": {},
@@ -178,26 +176,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
     "%matplotlib qt\n",
-    "plt.rcParams['figure.figsize'] = 30, 10\n",
+    "plt.rcParams['figure.figsize'] = 20, 15\n",
     "fig = plt.figure()\n",
     "ax = fig.add_subplot(111, autoscale_on=False, xlim=(-50, 50), ylim=(-20, 50))\n",
     "ax.grid()\n",
     "\n",
-    "im = plt.imread('tetrazeph.png')\n",
-    "newax = fig.add_axes([0.477, 0.3, 0.07, 0.1], anchor='SW')\n",
+    "im = plt.imread('Car-Top-Red-icon.png')\n",
+    "newax = fig.add_axes([0.477, 0.28, 0.07, 0.1], anchor='SW')\n",
     "newax.imshow(im)\n",
     "newax.axis('off')\n",
     "ax.set_aspect('equal', 'datalim')\n",
     "     \n",
     "S_max, = ax.plot([], [], '--' , lw=1, color='red')   \n",
-    "obstacles, = ax.plot([], [], 'o', markersize=17, lw=2, color='gray')\n",
+    "obstacles, = ax.plot([], [], 'o', markersize=20, lw=2, color='gray')\n",
     "time_template = 'time = %.1fs'\n",
     "time_text = ax.text(0.05, 0.9, '', transform=ax.transAxes)\n",
     "\n",
@@ -256,7 +254,7 @@
     "\n",
     "ani = animation.FuncAnimation(fig, animate, np.arange(1, len(y)),\n",
     "    interval=20, blit=False, init_func=init)\n",
-    "#ani.save('bot.mp4', fps=20, bitrate=5000, codec=\"h264\", writer=writer)\n",
+    "ani.save('bot.mp4', fps=20, bitrate=5000, codec=\"h264\", writer=writer)\n",
     "plt.show()"
    ]
   },
