--- a/_RotatingBot/ProblemDescription.ipynb
+++ b/_RotatingBot/ProblemDescription.ipynb
@@ -43,7 +43,9 @@
    "source": [
     "Where $\\psi$ is the yaw of the UAV and $u$ is some control input.  The $f$ will contain partial derivatives and may be thought of as an operator. The control input $u$ may be calculated via a reactive controller, for example of the form:\n",
     "\n",
-    "$$ u = k_1\\int w_1(\\theta)s(\\theta)d\\theta + k_2\\int w_s(\\theta)s(\\theta)d\\theta$$"
+    "$$ u = k_1\\int w_1(\\theta)s(\\theta)d\\theta + k_2\\int w_s(\\theta)s(\\theta)d\\theta$$\n",
+    "\n",
+    "$$ u = k_1 c_1 + k_2 c_2 $$"
    ]
   },
   {
@@ -223,7 +225,24 @@
     "\n",
     "Where $s(\\theta,t)$ is the distance to an obstacle at time $t$ and angle $\\theta$, and $\\dot{\\psi}$ is the rate of rotation of the vehicle.  If we assume that we can directly control the rate of change, then $u = \\dot{\\psi}$ and we have:\n",
     "\n",
-    "$$ \\frac{\\partial s}{\\partial t} = \\frac{\\partial s}{\\partial \\theta} u $$\n"
+    "$$ \\frac{\\partial s}{\\partial t} = \\frac{\\partial s}{\\partial \\theta} u $$\n",
+    "\n",
+    "\n",
+    "Justin says:\n",
+    "\n",
+    "$s_i$ = output of sensor i\n",
+    "\n",
+    "$s_{\\theta_0} = s_{\\theta_0}(\\psi)$\n",
+    "\n",
+    "$ \\frac{\\partial s_i}{\\partial t} = \\sum_k \\frac{\\partial s_i}{\\partial x_k} \\frac{\\partial x_k}{\\partial t} $\n",
+    "\n",
+    "$ \\frac{\\partial s_0}{\\partial t} = \\frac{\\partial s_0}{\\partial \\psi} \\frac{\\partial \\psi}{\\partial t} $\n",
+    "\n",
+    "$s((theta(t)) = depth( \\theta + \\psi(t) ) $ \n",
+    "\n",
+    "call $angle = \\theta + \\psi(t)$\n",
+    "\n",
+    "$\\frac{\\partial s}{\\partial t} = \\frac{\\partial s}{\\partial angle} \\frac{\\partial angle}{\\partial t}$\n"
    ]
   },
   {
